# PSO

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cl/: calc_coords.cl  hills.cl  waves.cl
lib/: glad.h
lib/nuklear/: nuklear_common.h
shaders/: shader.frag  shader.vert
src/: main.cpp
src/auxiliary/: aux.cpp  aux.h
src/canvas/: Canvas.cpp  Canvas.h
src/function/: Function.cpp  Function.h
src/gl/: Shader.cpp  Shader.h
src/lib/: glad.c  nuklear.cpp
src/opencl/: CLEnviroment.cpp  CLEnviroment.h
src/window/: Window.cpp  Window.h  WindowGUI.cpp
